# tesi_dua

docker/container-x86-base/: Dockerfile
docker/container-x86-base/.devcontainer/: devcontainer.json  docker-compose.yaml
gazebo/models/axis_camera/: model.config  model.sdf
gazebo/models/bookstore/: bookstore.world
gazebo/models/bunker/: model.config  model.sdf
gazebo/models/seppia_lidar/: .gitignore  model.config
src/LIO-SAM/config/: params.yaml
src/LIO-SAM/src/: imuPreintegration.cpp
src/ORB-SLAM2/src/ORB-SLAM2/Config/: Stereo-ZED2i-VGA.yaml  Stereo-ZEDMini-VGA.yaml
src/ORB-SLAM2/src/orbslam2_driver/config/: orb2_driver_zed2i_stereo_vga.yaml  orb2_driver_zedm_stereo_vga.yaml
src/ORB-SLAM2/src/orbslam2_driver/launch/: orb2_driver_zed_stereo.launch.py
src/ldc23-simulator/: README.md
src/ldc23-simulator/config/gazebo/models/aruco/: model.config  model.sdf
src/ldc23-simulator/config/gazebo/models/aruco10/: model.config  model.sdf
src/ldc23-simulator/config/gazebo/models/aruco120/: model.config  model.sdf
src/ldc23-simulator/config/gazebo/models/aruco130/: model.config  model.sdf
src/ldc23-simulator/config/gazebo/models/aruco140/: model.config  model.sdf
src/ldc23-simulator/config/gazebo/models/aruco15/: model.config  model.sdf
src/ldc23-simulator/config/gazebo/models/aruco150/: model.config  model.sdf
src/ldc23-simulator/config/gazebo/models/aruco15box/: model.config  model.sdf
src/ldc23-simulator/config/gazebo/models/aruco160/: model.config  model.sdf
src/ldc23-simulator/config/gazebo/models/aruco170/: model.config  model.sdf
src/ldc23-simulator/config/gazebo/models/aruco180/: model.config  model.sdf
src/ldc23-simulator/docker/container-x86-cudev/: Dockerfile  commands.sh
src/ldc23-simulator/docker/container-x86-cudev/.devcontainer/: devcontainer.json  docker-compose.yaml
src/ldc23-simulator/docker/container-x86-dev/: Dockerfile
src/ldc23-simulator/docker/container-x86-dev/.devcontainer/: devcontainer.json  docker-compose.yaml
src/ldc23-simulator/src/gazebo_plugins/: CMakeLists.txt  package.xml
src/ldc23-simulator/src/gazebo_plugins/src/: planar_move.cpp
src/ldc23-simulator/src/gazebo_simulation/: .gitignore  package.xml  setup.py
src/ldc23-simulator/src/gazebo_simulation/config/: axis_camera_controller.yaml
src/ldc23-simulator/src/gazebo_simulation/launch/: gzserver.launch.py  world_seppia.launch.py
src/ldc23-simulator/src/gazebo_simulation/worlds/: empty.world  modified.world  modified_camera.world  normal.world
src/ldc23-simulator/src/ldc23-robot-description/: README.md
src/ldc23-simulator/src/ldc23-robot-description/src/axis_camera_description/: CMakeLists.txt  package.xml
src/ldc23-simulator/src/ldc23-robot-description/src/axis_camera_description/launch/: axis_camera_description.launch.py
src/ldc23-simulator/src/ldc23-robot-description/src/axis_camera_description/urdf/: axis_camera.urdf.xacro
src/lio_sam_gazebo_ros2/src/robot_gazebo/launch/: gzserver.launch.py  robot.launch.py  robot_sim.launch.py
src/lio_sam_gazebo_ros2/src/robot_gazebo/worlds/: lio_world.model
src/odom-listener/: CMakeLists.txt  package.xml
src/odom-listener/src/: odom_listener.cpp
src/zed_usb_driver/: README.md
src/zed_usb_driver/config/: config.yaml
src/zed_usb_driver/include/zed_usb_driver/: zed_usb_driver.hpp
src/zed_usb_driver/src/zed_usb_driver/: zed_usb_driver.cpp
(+61 files in other folders)
