<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
    <name>gazebo_simulation</name>
    <version>1.0.0</version>
    <description>Gazebo simulation package.</description>
    <maintainer email="isl.torvergata@gmail.com">Intelligent Systems Lab</maintainer>
    <license>GNU GPL v3.0</license>

    <depend>ament_index_python</depend>
    <depend>geometry_msgs</depend>
    <!-- <depend>px4_ros_com</depend> -->
    <depend>rclpy</depend>
    <depend>sensor_msgs</depend>
    <depend>stanis_fsm</depend>
    <depend>stanis_interfaces</depend>
    <depend>std_srvs</depend>
    <depend>tf2</depend>
    <depend>tf2_ros</depend>
    <depend>seppia_description</depend>
    <depend>stanis_description</depend>
    <depend>zed_description</depend>
    <depend>aaxis_camera_description</depend>

    <export>
        <build_type>ament_python</build_type>
    </export>
</package>
